# dreamdisplays

./: CHANGELOG.md  README.md  build.gradle.kts  crowdin.yml  gradle.properties  settings.gradle.kts  stonecutter.gradle.kts
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: _build.yml  build.yml  ci.yml  crowdin.yml  release.yml
api/: README.md  build.gradle.kts
application/: build.gradle.kts
client/fabric/: build.gradle.kts
client/neoforge/: build.gradle.kts
common/: build.gradle.kts
core/: README.md  build.gradle.kts
fabric/: build.gradle.kts
gradle/: build.gradle.kts  libs.versions.toml
media/: README.md
media-source/: build.gradle.kts
media/audio/: README.md  build.gradle.kts
media/player/: build.gradle.kts
media/runtime/: build.gradle.kts
media/source/: build.gradle.kts
native/: Cargo.toml  README.md  build.gradle.kts
native/lav/: Cargo.toml
native/lav/src/: lib.rs  session.rs  surface.rs
native/logging/: Cargo.toml
native/logging/src/: lib.rs
native/src/: convert.rs  lib.rs  session.rs
native/tests/: bench_convert.rs  ffmpeg_pipe.rs
neoforge/: build.gradle.kts
paper/: build.gradle.kts
platform/: README.md
platform/client/common/: README.md  (+1 more)
platform/resources/: README.md
platform/server/: README.md  build.gradle.kts
server/: build.gradle.kts
storage/: build.gradle.kts
util/: build.gradle.kts
versions/1.21.1/: gradle.properties
versions/1.21.11/: gradle.properties
versions/26.1.2/: gradle.properties
versions/26.2/: gradle.properties
versions/26.2-pre-4/: gradle.properties
(+1003 files in other folders)
