[workspace]
members = ["lav", "logging"]

[package]
name = "dreamdisplays-native"
version = "1.0.4"
edition = "2024"
authors = ["arnodoelinger"]
description = "Native media pipeline kernels for Dream Displays."
license = "LGPL-3.0"

[lib]
name = "dreamdisplays_native"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.103"
dreamdisplays-logging = { path = "logging" }
kanal = "0.1.1"
log = "0.4.33"
rayon = "1.12.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
