[package]
name = "dreamdisplays-lav"
version = "1.1.4"
edition = "2024"
authors = ["arnodoelinger"]
description = "In-process libav decode backend for Dream Displays."
license = "LGPL-3.0"

[lib]
name = "dreamdisplays_lav"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.103"
dreamdisplays-logging = { path = "../logging" }
ffmpeg-next = { version = "8.1.0", default-features = false, features = ["codec", "format", "software-scaling", "software-resampling"] }
log = "0.4.33"
